src/main/java/com/example/puddingbe/global/error/exception/PuddingException.java
package com.example.puddingbe.global.error.exception;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class PuddingException extends RuntimeException {
    private final ErrorCode errorCode;

    public PuddingException(ErrorCode errorCode, String customMessage) {
        super(customMessage);
        this.errorCode = errorCode;
    }
}
